--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,11 @@ img{width: 100%;}
   z-index: 5;
 }
 
+.hero.blog{
+  background: url('../img/home/blog.jpg') no-repeat center center/cover;
+  height: 30vh;
+}
+
 /* Icons */
 .icons{
   padding: 30px;
@@ -162,6 +167,29 @@ img{width: 100%;}
 .callback-form btn{
   padding: 12px 0;
   margin-top: 20px;
+}
+
+/* post */
+.post{
+  padding: 50px 30px;  
+}
+
+.post h2{
+  font-size: 40px;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: #ccc 1px solid;
+}
+
+.post .meta{
+  margin-bottom: 30px;
+}
+
+.post img{
+  width: 300px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto 30px;
 }
 
 /* footer */
