--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ img{width: 100%;}
   position: fixed;
   top: 0px;
   padding: 0 30px;
+  transition: 0.5s;
 }
 
 .navbar a{
@@ -62,6 +63,10 @@ img{width: 100%;}
 
 .navbar .logo{
   font-weight: 400;
+}
+
+.navbar.top{
+  background: transparent;
 }
 
 /* header */
